--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>PRUEBA</title>
     <script type="text/javascript">
         function GetMap() {
             var options = { EnableHighAccuracy: true, Timeout: 10000, MaximunAge: 60000 }
