--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>PRUEBA</title>
+    <H1>Pagina de Prueba</H1>
     <script type="text/javascript">
         function GetMap() {
             var options = { EnableHighAccuracy: true, Timeout: 10000, MaximunAge: 60000 }
