--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <title>PRUEBA</title>
     <H1>Pagina de Prueba</H1>
-    <script type="text/javascript">
+  <script>
+    /**<script type="text/javascript">*/
         function GetMap() {
             var options = { EnableHighAccuracy: true, Timeout: 10000, MaximunAge: 60000 }
             lat = 11.4095587;
@@ -24,9 +25,8 @@
                 map.setView({ center: +lat + "," + long, zoom: 1 });
             });
         }
-
     </script>
-    <script type="text/javascript" src="http://bing.com/api/maps/mapcontrol?callback=GetMap" async defer></script>
+    <script src="http://bing.com/api/maps/mapcontrol?callback=GetMap" async defer></script>
 </head>
 <body>
     <div id="myMap" style="position:relative;width:100%;height:95%; position:absolute; left:0px; top:auto"></div>
